--- a/notebooks/1_nettoyage.ipynb
+++ b/notebooks/1_nettoyage.ipynb
@@ -884,6 +884,16 @@
    "source": [
     "print(df_inter.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2f8067a6-f539-4753-aadd-01fe6673f2b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_inter.to_csv('~/work/predis/data/processed/data_processed1.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
